task5/tests/group/output/test3.out
lli: <stdin>:36:11: error: '%t2' defined with type 'i8' but expected 'i32'
store i32 %t2, i32* %foonum
          ^
